force-app/main/default/objects/Scheme_Question_Items__c/Scheme_Question_Items__c.object-meta.xml
<CustomObject>
    <label>Scheme Question Items</label>
    <nameField>
        <displayFormat>SQI-{00000}</displayFormat>
        <label>Scheme Question Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Question Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>