force-app/main/default/objects/Scheme_Question_Items__c/fields/Max_Character__c.field-meta.xml
<CustomField>
    <fullName>Max_Character__c</fullName>
    <label>Max. Character</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>