force-app/main/default/objects/Scheme_Question_Items__c/fields/Min_Character__c.field-meta.xml
<CustomField>
    <fullName>Min_Character__c</fullName>
    <label>Min. Character</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>