force-app/main/default/objects/Scheme_Question_Items__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Enter multiple values separated by commas (e.g. Value1,Value2,Value3). Do not use spaces after commas unless intentional.</description>
    <inlineHelpText>Enter multiple values separated by commas (e.g. Value1,Value2,Value3). Do not use spaces after commas unless intentional.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>