force-app/main/default/objects/Scheme_Question_Items__c/fields/Scheme_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Questionnaire</label>
    <referenceTo>Scheme_Questionnaire__c</referenceTo>
    <relationshipLabel>Scheme Question Items</relationshipLabel>
    <relationshipName>Scheme_Question_Items</relationshipName>
    <type>Lookup</type>
</CustomField>