force-app/main/default/objects/Scheme_Question_Items__c/fields/Section_Detail__c.field-meta.xml
<CustomField>
    <fullName>Section_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Detail</label>
    <referenceTo>Section_Details__c</referenceTo>
    <relationshipLabel>Scheme Question Items</relationshipLabel>
    <relationshipName>Scheme_Question_Items</relationshipName>
    <type>Lookup</type>
</CustomField>