force-app/main/default/objects/Scheme_Question_Items__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <label>Subtitle</label>
    <type>TextArea</type>
</CustomField>