force-app/main/default/objects/Scheme_Question_Items__c/fields/Yearly_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Scheme</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Scheme Question Items</relationshipLabel>
    <relationshipName>Scheme_Question_Items</relationshipName>
    <type>Lookup</type>
</CustomField>