force-app/main/default/objects/Scheme_Question_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section_Detail__c</columns>
    <columns>Section__c</columns>
    <columns>Scheme_Questionnaire__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Question__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Min_Character__c</columns>
    <columns>Max_Character__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>